Added few links

--- a/dom/log4j.properties
+++ b/dom/log4j.properties
@@ -39,3 +39,5 @@ log4j.category.org.logicalcobwebs.proxool=INFO,A1
 # Hbase libs logging
 log4j.category.org.apache.hadoop=INFO,A1
 log4j.category.org.apache.zookeeper=INFO,A1
+log4j.category.org.apache.isis=INFO,A1
+log4j.category.org.apache.wicket=INFO,A1
