--- a/webapp/src/main/webapp/WEB-INF/logging.properties
+++ b/webapp/src/main/webapp/WEB-INF/logging.properties
@@ -218,5 +218,5 @@ log4j.additivity.log4j.logger.org.apache.shiro.realm.AuthorizingRealm=false
 
 
 # Application-specific logging
-log4j.logger.com.ofbizian=DEBUG, Stderr
-log4j.additivity.com.ofbizian=false
+log4j.logger.org.apache.isis=INFO, Console
+log4j.logger.org.apache.wicket=INFO, Console
