--- a/webapp/src/main/webapp/WEB-INF/logging.properties
+++ b/webapp/src/main/webapp/WEB-INF/logging.properties
@@ -5,9 +5,9 @@
 #  to you under the Apache License, Version 2.0 (the
 #  "License"); you may not use this file except in compliance
 #  with the License.  You may obtain a copy of the License at
-#  
+#
 #         http://www.apache.org/licenses/LICENSE-2.0
-#         
+#
 #  Unless required by applicable law or agreed to in writing,
 #  software distributed under the License is distributed on an
 #  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -24,8 +24,8 @@ log4j.rootCategory=INFO, Console
 
 
 # The console appender
-log4j.appender.Console=org.apache.log4j.ConsoleAppender
-log4j.appender.Console.target=System.out
+log4j.appender.Console=org.apache.log4j.RollingFileAppender
+log4j.appender.Console.file=Console.log
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d{ABSOLUTE}  [%-20c{1} %-10t %-5p]  %m%n
 
@@ -199,7 +199,7 @@ log4j.additivity.org.apache.isis.core.metamodel.specloader.ServiceInitializer=fa
 
 log4j.logger.org.apache.isis.core.runtime.services.ServicesInstallerFromConfiguration=WARN,Console
 log4j.additivity.org.apache.isis.core.runtime.services.ServicesInstallerFromConfiguration=false
-    
+
 log4j.logger.org.apache.isis.core.commons.config.IsisConfigurationDefault=INFO,Console
 log4j.additivity.org.apache.isis.core.commons.config.IsisConfigurationDefault=false
 
