Added alpha summary field

--- a/webapp/src/main/webapp/WEB-INF/logging.properties
+++ b/webapp/src/main/webapp/WEB-INF/logging.properties
@@ -24,8 +24,8 @@ log4j.rootCategory=INFO, Console
 
 
 # The console appender
-log4j.appender.Console=org.apache.log4j.RollingFileAppender
-log4j.appender.Console.file=Console.log
+log4j.appender.Console=org.apache.log4j.ConsoleAppender
+log4j.appender.Console.target=System.out
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d{ABSOLUTE}  [%-20c{1} %-10t %-5p]  %m%n
 
