--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -7,7 +7,6 @@
         <artifactId>semat</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <artifactId>webapp</artifactId>
     <name>Semat Webapp</name>
     <packaging>war</packaging>
@@ -202,7 +201,6 @@
             <build>
                 <pluginManagement>
                     <plugins>
-                        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                         <plugin>
                             <groupId>org.eclipse.m2e</groupId>
                             <artifactId>lifecycle-mapping</artifactId>
@@ -231,52 +229,14 @@
                 </pluginManagement>
             </build>
         </profile>
-
-
-
         <profile>
             <id>docker</id>
-
             <build>
                 <plugins>
                     <plugin>
                         <groupId>io.fabric8</groupId>
                         <artifactId>docker-maven-plugin</artifactId>
                         <version>0.16.9</version>
-
-
-                        <!--<configuration>-->
-                            <!--<images>-->
-                                <!--<image>-->
-                                    <!--<alias>semat</alias>-->
-                                    <!--<name>ofbizian/semat:${project.version}</name>-->
-
-                                    <!--<build>-->
-                                        <!--<from>java:8</from>-->
-                                        <!--<assembly>-->
-                                            <!--<descriptor>docker-assembly.xml</descriptor>-->
-                                        <!--</assembly>-->
-                                        <!--<cmd>-->
-                                            <!--<shell>java -jar /maven/service.jar</shell>-->
-                                        <!--</cmd>-->
-                                    <!--</build>-->
-
-                                    <!--<run>-->
-                                        <!--<ports>-->
-                                            <!--<port>tomcat.port:8080</port>-->
-                                        <!--</ports>-->
-                                        <!--<wait>-->
-                                            <!--<http>-->
-                                                <!--<url>http://localhost:${tomcat.port}/access</url>-->
-                                            <!--</http>-->
-                                            <!--<time>10000</time>-->
-                                        <!--</wait>-->
-                                    <!--</run>-->
-                                <!--</image>-->
-                            <!--</images>-->
-                        <!--</configuration>-->
-
-
                         <configuration>
                             <logDate>default</logDate>
                             <autoPull>true</autoPull>
@@ -287,8 +247,7 @@
                                     <build>
                                         <cleanup>false</cleanup>
                                         <optimise>true</optimise>
-                                        <!--<from>java:8u40</from>-->
-                                        <from>tomcat:7.0.72-jre7</from>
+                                        <from>tomcat:9.0.0.M11-alpine</from>
                                         <maintainer>Bilgin Ibryam</maintainer>
                                         <tags>
                                             <tag>latest</tag>
@@ -303,7 +262,6 @@
                                         <runCmds>
                                             <runCmd>rm -fr /usr/local/tomcat/webapps/*</runCmd>
                                             <runCmd>mv /maven/ROOT.war /usr/local/tomcat/webapps/</runCmd>
-                                            <!--<runCmd>cp tomcat-users.xml /usr/local/tomcat/conf/</runCmd>-->
                                         </runCmds>
                                         <cmd>
                                             <shell>
@@ -313,14 +271,14 @@
                                     </build>
                                     <run>
                                         <env>
-                                            <CATALINA_OPTS>-Djava.security.egd=file:/dev/./urandom -Xmx512m</CATALINA_OPTS>
+                                            <CATALINA_OPTS>-Djava.security.egd=file:/dev/./urandom</CATALINA_OPTS>
                                         </env>
                                         <ports>
-                                            <port>8282:8080</port>
+                                            <port>8080:8080</port>
                                         </ports>
                                         <wait>
-                                            <!--<url>http://${docker.host.address}:8080</url>-->
-                                            <url>http://10.1.2.2:8282</url>
+                                            <url>http://${docker.host.address}:8080</url>
+                                            <!--<url>http://10.1.2.2:8080</url>-->
                                             <time>60000</time>
                                         </wait>
                                         <log>
