Cleanup seed data

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -247,7 +247,8 @@
                                     <build>
                                         <cleanup>false</cleanup>
                                         <optimise>true</optimise>
-                                        <from>tomcat:9.0.0.M11-alpine</from>
+                                        <!--<from>tomcat:9.0.0.M11-alpine</from>-->
+                                        <from>tomcat:7-jre8-alpine</from>
                                         <maintainer>Bilgin Ibryam</maintainer>
                                         <tags>
                                             <tag>latest</tag>
