--- a/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -149,8 +149,8 @@ isis.reflector.facet.domainObjectAnnotation.removingLifecycleEvent.postForDefaul
 #
 # required by EmailServiceDefault
 #
-isis.service.email.sender.address=804cf56790df9b@mailtrap.io
-isis.service.email.sender.password=cf0b6dd4cb79dd
+isis.service.email.sender.address=foo@mailtrap.io
+isis.service.email.sender.password=bar
 isis.service.email.sender.hostname=mailtrap.io
 isis.service.email.port=2525
 isis.service.email.tls.enabled=false
@@ -275,8 +275,8 @@ isis.services.injector.setPrefix=false
 # Specify viewer defaults
 #
 isis.viewers.paged.standalone=20
-isis.viewers.paged.parented=10
-isis.viewer.wicket.bookmarkedPages.maxSize=5
+isis.viewers.paged.parented=20
+isis.viewer.wicket.bookmarkedPages.maxSize=10
 
 
 #isis.viewers.propertyLayout.labelPosition=LEFT
