--- a/webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/webapp/src/main/webapp/WEB-INF/isis.properties
@@ -155,6 +155,12 @@ isis.service.email.sender.hostname=mailtrap.io
 isis.service.email.port=2525
 isis.service.email.tls.enabled=false
 
+#isis.service.email.sender.hostname=debugmail.io
+#isis.service.email.port=25
+#isis.service.email.tls.enabled=false
+#isis.service.email.sender.address=info@incode.org
+#isis.service.email.sender.password=XXXXXXXXXXXXXXXXXXXXXXXXX
+
 
 #
 # whether ExceptionRecognizers should also log any recognized exceptions
